[package]
name = "tldr-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
reqwest = "0.12.3"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
